created game logic

--- a/index.html
+++ b/index.html
@@ -28,11 +28,7 @@
 			<p>Developed by: Joanne Cabling
 			<a href="#">Facebook</a>  |  <a href="#">Instagram</a></p>
 
-		<div>
-		    <img src="images/back.png" alt="Queen of Diamonds">
-		    <img src="images/back.png" alt="Queen of Hearts">
-		    <img src="images/back.png" alt="King of Diamonds">
-		    <img src="images/back.png" alt="King of Hearts">
+	<div id="game-board">
 		</div>
   	</main>
 
@@ -46,3 +42,4 @@
 </body>
 
 </html>
+
